z-index fixes

--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
 
   height: 56px;
   display: flex;
@@ -15,7 +15,7 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 1;
+  z-index: 4;
 }
 
 .logo-img-background {
